# brzytwa

./: .gitattributes  Dockerfile  INFRASTRUCTURE.md  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
backend-ai/: .dockerignore  CMakeLists.txt  Dockerfile  HYBRID_README.md  README_CPP.md  fusion_server.py  main.cpp  main.py  requirements.txt
backend-node/: .dockerignore  Dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.json
backend-node/src/: index.ts
backend-node/tests/: setup.ts
monitoring/: alert_rules.yml  prometheus.yml
web/: .dockerignore  Dockerfile  jest.config.js  nginx.conf  package-lock.json  package.json  postcss.config.js
web/src/: App.tsx  Matrix.test.tsx  setupTests.ts
web/src/components/: AITools.tsx  LanguageSwitcher.tsx  Matrix.tsx
web/src/components/ai/: AIManagement.tsx  AdvancedAIAnalysis.tsx  BatchAnalysis.tsx  ImageUpload.tsx
web/src/i18n/: LanguageContext.tsx  translations.ts
web/src/services/: api.ts
